--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -106,3 +106,4 @@ a:hover { text-decoration: none; }
 @import 'loading.scss';
 @import 'suspense.scss';
 @import 'login.scss';
+@import 'modal.scss';
