--- a/src/assets/styles/breadcrumb.scss
+++ b/src/assets/styles/breadcrumb.scss
@@ -14,6 +14,10 @@
 		}
 	}
 
+	.bread-crumb-right {
+		padding-right: 1rem;
+	}
+
 	.bread-crumb-right, .toolbar-right {
 		flex: 1;
 		display: flex;
@@ -24,10 +28,12 @@
 			margin: 0rem 0.125rem;
 		}
 	}
+
+	i {
+		font-size: 1rem;
+	}
 }
 
-.modal-content {
-    .toolbar-container {
-        padding-top: 0;
-    }
+.toolbar-container {
+	padding-top: 0;
 }
