--- a/src/assets/styles/loading.scss
+++ b/src/assets/styles/loading.scss
@@ -42,3 +42,13 @@
 		}
 	}
 }
+/* 
+.dropdown-item {
+	&.loading {
+		span {
+			display: block;
+			width: 100%;
+			@include loadingAnimation;
+		}
+	}
+} */
