--- a/src/assets/styles/avatar.scss
+++ b/src/assets/styles/avatar.scss
@@ -7,6 +7,7 @@
 
 	.avatar-user-name {
 		margin-right: 1rem;
+		color: var(--black);
 	}
 }
 
@@ -41,8 +42,10 @@
 		overflow: hidden;
 
 		a { display: block; }
+		background-color: var(--white);
 
 		.dropdown-item {
+			color: var(--black);
 			font-weight: 500;
 			padding: .75rem 1.35rem;
 
@@ -64,28 +67,9 @@
 			background-color: unset;
 			color: unset;
 		}
-	}
-}
 
-.teamcontainer {
-	width: 75px;
-	text-align: center;
-	font-size: 0.8rem;
-
-	.indicator {
-		width: 18px;
-		height: 18px;
-		bottom: -3px;
-		right: -3px;
-		border: 2px solid var(--light);
-		border-radius: 50%;
-
-		&.prs {
-			background-color: var(--success);
-		}
-
-		&:not(.prs) {
-			background-color: var(--danger);
+		.dropdown-item:hover {
+			background-color: var(--light-grey);
 		}
 	}
 }
