--- a/src/assets/styles/breadcrumb.scss
+++ b/src/assets/styles/breadcrumb.scss
@@ -3,6 +3,7 @@
 	padding: 1rem 0;
 
 	.bread-crumb-left, .toolbar-left {
+		color: var(--black);
 		display: flex;
 		flex: 1;
 		align-items: baseline;
