--- a/src/assets/styles/table.scss
+++ b/src/assets/styles/table.scss
@@ -55,7 +55,7 @@
 		position: relative;
 		z-index: 100;
 		background-color: var(--primary);
-		color: var(--white);
+		color: #ffffff;
 		border-color: var(--primary) !important;
 
 		.form-control {
@@ -84,7 +84,8 @@
 		display: flex;
 		align-items: center;
 		padding: 0.75rem;
-		border: 1px solid var(--light-grey);
+		// border: 1px solid var(--light-grey);
+		border: 1px solid #dee2e6;
 		height: 50px;
 
 		span {
