--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -130,3 +130,4 @@ a:hover { text-decoration: none; }
 @import 'suspense.scss';
 @import 'login.scss';
 @import 'modal.scss';
+@import 'input.scss';
