--- a/src/assets/styles/table.scss
+++ b/src/assets/styles/table.scss
@@ -90,6 +90,11 @@
 
 		span {
 			white-space: nowrap;
+			transition: unset !important;
+		}
+		
+		a {
+			transition: unset !important;
 		}
 	}
 
