--- a/src/assets/styles/loading.scss
+++ b/src/assets/styles/loading.scss
@@ -20,13 +20,16 @@
 
 .table {
 	&.loading {
-		.row-body span {
-			width: 100%;
-			border-radius: .25rem;
+		.row-body {
+			span {
+				// transition: unset;
+				width: 100%;
+				border-radius: .25rem;
 
-			@include loadingAnimation;
+				@include loadingAnimation;
 
-			a { color: transparent }
+				a { color: transparent !important; }
+			}
 		}
 	}
 }
