--- a/src/assets/styles/form.scss
+++ b/src/assets/styles/form.scss
@@ -10,6 +10,8 @@
 			.form-control-plaintext {
 				cursor: default;
 				pointer-events: none;
+				border-radius: .25rem;
+				// padding: .375rem .75rem;
 			}
 
 			.form-icon {
@@ -31,7 +33,6 @@
 			margin-top: 2.5rem;
 		}
 	}
-
 }
 
 .form-button-group {
