Add Button components with access functionality

--- a/src/assets/styles/form.scss
+++ b/src/assets/styles/form.scss
@@ -1,9 +1,10 @@
 .form {
-	.row:nth-last-child(2) {
+	/* .row:nth-last-child(2) {
 		margin-bottom: 0;
-	}
+	} */
 	
 	.row {
+		// margin-bottom: 0;
 		.form-group {
 			margin-right: 1rem;
 
