--- a/src/assets/styles/tabs.scss
+++ b/src/assets/styles/tabs.scss
@@ -57,6 +57,7 @@
 }
 
 .tab-content {
+	position: relative;
 	padding-top: 1rem;
 
 	.bread-crumb {
@@ -84,7 +85,7 @@
     background-color: var(--white);
     z-index: 200;
     /* padding-bottom: 1rem; */
-    margin-bottom: 1rem;
+    // margin-bottom: 1rem;
 	border-bottom: 1px solid var(--light-grey);
 	
 	.noactivenavlink.activelink {
@@ -112,7 +113,7 @@
 			width: 100%;
 			overflow-y: hidden;
 			overflow-x: scroll;
-			div {
+			a {
 				white-space: nowrap;
 			}
 		}
