adjust table styling on dark mode

--- a/src/assets/styles/table.scss
+++ b/src/assets/styles/table.scss
@@ -7,6 +7,11 @@
 		top: 55px !important;
 		right: 0;
 	}
+
+	.simplebar-content-wrapper {
+		border-radius: 0.25rem;
+    	background-color: var(--white);
+	}
 }
 
 .tab-page-container {
