--- a/src/assets/styles/notification.scss
+++ b/src/assets/styles/notification.scss
@@ -37,6 +37,7 @@
 			font-weight: 800;
 			font-size: .65rem;
 			text-transform: uppercase;
+			padding: .5rem;
 		}
 
 		.notification-header:active {
