--- a/src/assets/styles/fieldset.scss
+++ b/src/assets/styles/fieldset.scss
@@ -1,8 +1,9 @@
 .fieldset {
     border: 1px solid var(--light-grey);
     border-radius: .25rem;
-    padding: 1rem;
+    padding: .25rem 1.5rem;
 }
+
 .fieldset-legend {
     font-size: 1.1rem;
     font-weight: 600;
