--- a/src/assets/styles/tabs.scss
+++ b/src/assets/styles/tabs.scss
@@ -1,82 +1,8 @@
-.tab-nav-container {
-	.nav-item {
-		position: relative;
-		border: unset;
-		margin: unset;
-		color: unset;
-	}
-
-	.nav-item:active {
-		outline: unset;
-	}
-
-	.nav-item::after {
-		content: "";
-		position: absolute;
-		bottom: 0;
-		border-bottom: 3px solid var(--primary);
-		width: 0%;
-
-		transition: all 0.2s linear;
-	}
-
-	.nav-item[inbetween]::after {
-		transition: unset;
-
-		width: 100%;
-		left: 0;
-		right: 0;
-	}
-
-	.nav-item[remove-inbetween]::after {
-		transition: unset;
-		width: 0%;
-		left: 0;
-		// right: 0;
-	}
-
-	.nav-item.active::after {
-		width: 100%;
-	}
-
-	.nav-item[from=left]::after {
-		right: 0;
-	}
-
-	.nav-item.active[to=right]::after {
-		left: 0;
-	}
-
-	.nav-item[from=right]::after {
-		left: 0;
-	}
-
-	.nav-item.active[to=left]::after {
-		right: 0;
-	}
-}
-
 .tab-content {
 	position: relative;
 	padding-top: 1rem;
 
-	.bread-crumb {
-		padding-top: 0rem;
-	}
-
-	.page {
-		.simplebar-page {
-			min-height: calc(100vh - 147px - 60px);
-			max-height: calc(100vh - 147px - 60px);
-			min-width: 100%;
-
-			padding-right: 1rem;
-
-			.simplebar-track.simplebar-vertical {
-				right: .15rem;
-			}
-		}
-	}
+	.bread-crumb { padding-top: 0rem; }
 }
 
 .nav.nav-tabs {
@@ -84,8 +10,6 @@
     top: 0;
     background-color: var(--white);
     z-index: 200;
-    /* padding-bottom: 1rem; */
-    // margin-bottom: 1rem;
 	border-bottom: 1px solid var(--light-grey);
 	
 	.noactivenavlink.activelink {
@@ -113,9 +37,7 @@
 			width: 100%;
 			overflow-y: hidden;
 			overflow-x: scroll;
-			a {
-				white-space: nowrap;
-			}
+			a { white-space: nowrap; }
 		}
 	}
 }
