--- a/src/assets/styles/body.scss
+++ b/src/assets/styles/body.scss
@@ -1,33 +1,42 @@
-.content-container {
-	position: relative;
-	z-index: 100;
-
-	.body {
-		background-color: var(--white);
-		padding-left: 1rem;
-		
-		z-index: 105;
+#root-container {
+	display: flex;
+	height: 100%;
+	overflow: hidden;
+	
+	.content-container {
+		display: flex;
+		flex-direction: column;
+		position: relative;
 		height: 100%;
+		z-index: 100;
+		flex: 1;
+
+		.body {
+			position: relative;
+			display: flex;
+			height: 100%;
+			background-color: var(--white);
+			z-index: 105;
+			width: calc(100vw - 14.5rem);
+			transition: max-width .25s ease-in;
+		}
+	}
+
+	.navbar-left.closed + .content-container{
+		.body {
+			width: calc(100vw - 6rem);
+			max-width: calc(100vw - 6rem);
+		}
 	}
 }
 
-.page {
-	height: 100%;
-	.body-content {
-		position: relative;
-		min-height: 100%;
-		color: var(--dark-grey);
-	}
-
-	.simplebar-page {
-		min-height: calc(100vh - 139px);
-		max-height: calc(100vh - 139px);
-		min-width: 100%;
-
-		padding-right: 1rem;
-
-		.simplebar-track.simplebar-vertical {
-			right: .15rem;
+@media (max-width: 480px) {
+	#root-container {
+		.content-container {
+			.body {
+				width: 100vw;
+				max-width: 100vw;
+			}
 		}
 	}
 }
