--- a/src/assets/styles/breadcrumb.scss
+++ b/src/assets/styles/breadcrumb.scss
@@ -1,6 +1,8 @@
 .bread-crumb, .toolbar-container { 
 	display: flex;
 	padding: 1rem 0;
+	position: sticky;
+    left: 0;
 
 	.bread-crumb-left, .toolbar-left {
 		color: var(--black);
@@ -10,31 +12,34 @@
 		font-size: 1.125rem;
 		flex-wrap: wrap;
 
+		span { text-transform: capitalize; }
+	}
+
+	.btn {
+		margin: 0rem 0.15rem;
+		i { font-size: 1rem; }
 		span {
-			text-transform: capitalize;
+			padding: 0 .5rem;
+			flex: 1;
 		}
-	}
-
-	.bread-crumb-right {
-		padding-right: 1rem;
-	}
-
-	.bread-crumb-right, .toolbar-right {
-		flex: 1;
-		display: flex;
-		justify-content: flex-end;
-		align-items: center;
-
-		.btn {
-			margin: 0rem 0.125rem;
-		}
-	}
-
-	i {
-		font-size: 1rem;
 	}
 }
 
-.toolbar-container {
+.bread-crumb + .body-content .toolbar-container {
 	padding-top: 0;
+}
+
+.toolbar-container {
+
+	.toolbar-left {
+		.btn:first-child {
+			margin-left: 0;
+		}
+	}
+
+	.toolbar-right {
+		.btn:last-child {
+			margin-right: 0;
+		}
+	}
 }
