--- a/src/assets/styles/modal.scss
+++ b/src/assets/styles/modal.scss
@@ -1,12 +1,17 @@
 .modal-content {
     position: relative;
     width: 75%;
-    height: 80%;
+    height: 80vh;
     z-index: 205;
     border: unset;
     overflow: hidden;
     border-radius: .5rem;
     background-color: var(--white);
+
+    transition: transform 0.25s ease-in-out;
+    transform: scale(1);
+
+    &.hidden { transform: scale(0); }
 
     .modal-header {
         background-color: var(--primary);
@@ -23,56 +28,46 @@
 
         .modal-right {
             justify-content: flex-end;
+            flex: unset;
         }
 
         .bread-crumb { padding: 0 !important; }
     }
 
     .modal-body {
-        min-height: calc(100% - 67px);
-        max-height: calc(100% - 67px);
-        padding-right: 0;
+        padding: 1rem 0;
+        display: flex;
+        height: calc(80vh - 64px);
         
         .page {
-            min-height: 100%;
-            max-height: 100%;
-            position: relative;
-            
-            .simplebar-page {
-                min-height: 100%;
-                max-height: 100%;
+            .body-content {
+                height: calc(80vh - 100px);
 
-                .simplebar-track.simplebar-vertical {
-                    top: 0;
-                }
-            }
+                .tab-content {
+                    height: calc(100% - 2.75rem);
 
-            .tab-page-container {
-                .page {
-                    .simplebar-page {
-                        min-height: calc(80vh - 160px);
-                        max-height: calc(80vh - 160px);
-                    }
+                    .tab-page-container {
+                        height: 100%;
 
-                    .bread-crumb + .simplebar-page {
-                        min-height: calc(80vh - 210px);
-                        max-height: calc(80vh - 210px);
-                    }
+                        .page {
+                            height: 100%;
+                            .body-content {
+                                height: 100%;
+                            }
 
-                    .simplebar-table {
-                        min-height: calc(80vh - 265px);
-                        max-height: calc(80vh - 265px);
-                        margin-bottom: 0;
+                            .bread-crumb + .body-content {
+                                height: calc(100% - 52px);
+                            }
+                        }
                     }
                 }
             }
         }
     }
 
-    .modal-body, .modal-footer {
-        background-color: var(--white);
-    }
+    .modal-body, .modal-footer { background-color: var(--white); }
 }
+
 
 @media (max-width: 480px) {
     .modal-content {
@@ -80,33 +75,44 @@
         width: 100%;
         height: 95%;
         bottom: 0;
-
         border-radius: 0rem;
-
         border-top-left-radius: 1rem;
         border-top-right-radius: 1rem;
+        transition: bottom 0.25s ease-in-out;
+        &.hidden {  bottom: -100%; transform: scale(1); }
 
         .modal-header {
-            background-color: var(--white);
-            color: var(--black);
+            // background-color: var(--white);
+            // color: var(--black);
 
-            .modal-left {
-                font-weight: bold;
-            }
+            .modal-left { font-weight: bold; }
         }
 
         .modal-body {
             .page {
-                .simplebar-page {
-                    .simplebar-track.simplebar-vertical {
-                        top: 0;
+                .body-content {
+                    height: 100%;
+
+                    .tab-content {
+                        height: calc(100% - 2.75rem);
+
+                        .tab-page-container {
+                            height: 100%;
+
+                            .page {
+                                height: 100%;
+                                .body-content {
+                                    height: 100%;
+                                }
+
+                                .bread-crumb + .body-content {
+                                    height: calc(100% - 52px);
+                                }
+                            }
+                        }
                     }
                 }
             }
         }
     }
-}
-
-.simplebar-content-wrapper {
-    height: 100% !important;
 }
