--- a/src/assets/styles/navbar.scss
+++ b/src/assets/styles/navbar.scss
@@ -1,4 +1,15 @@
 
+ul {
+	position: relative;
+	margin-block-start: unset;
+	margin-block-end: unset;
+	padding-inline-start: unset;
+
+	li {
+		list-style-type: none;
+	}
+}
+
 .navbar-left {
 	--padding: 1rem 1.25rem;
 
@@ -10,6 +21,7 @@
 	height: 100%;
 	flex-shrink: 0;
 	z-index: 105;
+	overflow: auto;
 
 	transition: all 0.2s linear;
 
@@ -237,6 +249,32 @@
 			}
 		}
 	}
+
+	&::-webkit-scrollbar {
+		width: 0rem;
+		height: 0rem;
+		transition: width .2s ease-in-out;
+	}
+
+	&::-webkit-scrollbar-track {
+		background-color: rgba(255, 255, 255, 0.1);
+	}
+
+	&::-webkit-scrollbar-thumb {
+		background-color: rgba(0, 0, 0, 0.3);
+		border-radius: .25rem;
+	}
+
+	&::-webkit-scrollbar-corner  {
+		display: none;
+	}
+
+	&:hover {
+		&::-webkit-scrollbar {
+			width: .5rem;
+			height: .5rem;
+		}
+	}
 }
 
 .navbar-divider-horizontal {
@@ -313,7 +351,6 @@
 					padding: 0 1rem;
 					display: flex;
 					align-items: center;
-					// justify-content: center;
 					font-size: .85rem;
 					font-weight: normal;
 					text-transform: none;
@@ -322,35 +359,5 @@
 				}
 			}
 		}
-
-		// ul:not(.navitem-children-parent) {
-		// 	li {
-		// 		/* opening children */
-		// 		div.navitem-container.open + ul.navitem-children-parent {
-		// 			position: relative;
-		// 			left: 0;
-		// 			top: 0 !important;
-		// 			opacity: 1;
-		// 			width: 90%;
-		// 			margin: auto;
-		// 			box-shadow: unset !important;
-
-		// 			li {
-		// 				.navitem-container {
-		// 					.navitem-string {
-		// 						font-size: 80%;
-		// 					}
-		// 				}
-		// 			}
-		// 		}
-
-		// 		/* closing children */
-		// 		div.navitem-container.closing + ul.navitem-children-parent {
-		// 			left: 0;
-		// 			opacity: 0;
-		// 			height: 0;
-		// 		}
-		// 	}
-		// }
 	}
 }
